--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <tfoot>
                 <tr>
                     <td>Média Final</td>
-                    <td id="media-final-valor">7</td>
+                    <td id="media-final-valor">---</td>
                     <td id="media-final-resultado"><span class="resultado aprovado"></span></td>
                 </tr>
             </tfoot>
